# pquant_ultimate

./: .gitignore  AGENTS.md  AUTORESEARCH.md  CLAUDE.md  JOURNAL.MD  KNOWLEDGE.md  PHASE1_COMPLETE.md  PHASE1_IMPROVEMENTS.md  PLAN.md  README.md  README_INDICATORS.md  REFACTOR_PLAN.md  RUNNING-RESEARCH.md  SOURCES.md  demo_indicators.py  example_indicator_import.py  indicators_old.py  main.py  pyproject.toml  reference_XGBOOST.ipynb  visualize_pivots.ipynb  visualize_pivots.py
data/: 2_filter_tickers.py  3_validate_tickers.py  4_build_training_set.py  5_update_training_data.py  README.md  build-training-set-fixes.md  build_training_set.py  clean_swedish_tickers.py  clean_ticker_json.py  data_philosophy.md  filter_tickers.py  fixes-summary.md  get_tickers.py  pipeline-corrected.md  quick-start.md  run.py  test_download_logic.py  test_yfinance.py  ticker_file_utils.py  training_selection_stats.json  validate_tickers.py
docs/: model_philosophy copy.md  model_philosophy.md
indicators/: README_INDICATORS.md  __init__.py  _numba_core.py  advanced.py  base.py  calculator.py  composite.py  cycle.py  momentum.py  pattern.py  trend.py  volatility.py  volume.py
lib/: __init__.py  data.py  eval.py  features.py  pivot_events.py
research/: .best_score  COMBAT_LOG.md  RESEARCH_LOG.md  backtest_and_plot.py  baseline.py  diagnostics.py  eval_best.tsv  experiment.py  feat_imp_best.tsv  features_lab.py  gate.sh  metrics.md  model_wrappers.py  plot.py  program.md  results.tsv  run.sh  run_codex.sh  test_and_plot.py  test_diagnostics.py
tests/: __init__.py  conftest.py  test_eval.py  (+9 more)
(+46 files in other folders)
