[project]
name = "pquant-ultimate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "ta-lib>=0.6.8",
]

[dependency-groups]
dev = [
    "financedatabase>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "requests>=2.32.5",
]
