[project]
name = "pquant-ultimate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "ta-lib>=0.6.8",
]

[dependency-groups]
dev = [
    "financedatabase>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".venv/",
    "build/",
    "dist/",
    "__pycache__/",
    "*.egg-info/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []
exclude = [
    ".venv/",
    "build/",
    "dist/",
]
